# src/swagger.yaml
@@ -11,96 +11,23 @@ tags:
   - name: User
     description: Perform Different operation on Users
 paths:
-  # /activity/list:
-  #   get:
-  #     tags:
-  #       - Activity
-  #     summary: Get list of Activities
-  #     description: ''
-  #     operationId: getActivityList
-  #     responses:
-  #       '200':
-  #         description: successful operation
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: '#/components/schemas/Activity'
-  #       '500':
-  #         description: Invalid input
-  # /activity/update:
-  #   put:
-  #     tags:
-  #       - Activity
-  #     summary: Update an existing activity
-  #     description: ''
-  #     operationId: updateActivity
-  #     responses:
-  #       '200':
-  #         description: successful operation
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: '#/components/schemas/Activity'
-  #       '400':
-  #         description: Invalid ID supplied
-  #       '404':
-  #         description: Activity Id not found
-  #       '405':
-  #         description: Validation exception
-  #     requestBody:
-  #       $ref: '#/components/requestBodies/Activity'
-  # /activity/{id}:
-  #   get:
-  #     tags:
-  #       - Activity
-  #     summary: Find Activity By Id
-  #     description: It shows activity ehich maps with Id
-  #     operationId: getActivity
-  #     parameters:
-  #       - name: id
-  #         description: Id  that need to be considered for filter
-  #         required: true
-  #         in: path
-  #         style: form
-  #         explode: false
-  #         schema:
-  #           type: number
-  #     responses:
-  #       '200':
-  #         description: successful operation
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: object
-  #               $ref: '#/components/schemas/Activity'
-  #       '400':
-  #         description: Invalid status value
-  # /activity/deleteById/{id}:
-  #   delete:
-  #     tags:
-  #       - Activity
-  #     summary: Delete Activity By Id
-  #     description: 
-  #       delete activity by ID
-  #     operationId: findPetsByTags
-  #     parameters:
-  #       - name: id
-  #         in: path
-  #         description: id to filter by
-  #         required: true
-  #         style: form
-  #         explode: false
-  #         schema:
-  #          type: number
-  #     responses:
-  #       '200':
-  #         description: Deleted Successfully
-  #       '400':
-  #         description: Invalid tag value
-  #     deprecated: true
-  
   /users:
-    post:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - User
+      summary: Get All Users
+      description: ''
+      operationId: Get User
+      responses:
+        '200':
+          description: User Created Successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+    post: 
       tags:
         - User
       summary: Create New User
@@ -127,6 +54,10 @@ paths:
                   description: "User Last Name"
                   type: string
                   required: true
+                userName:
+                  description: "User Last Name"
+                  type: string
+                  required: true
                 email:
                   description: "User Email"
                   type: string
@@ -139,74 +70,8 @@ paths:
                   description: "Password"
                   type: string
         required: true
-  # /user/{id}:
-  #   get:
-  #     tags:
-  #       - User
-  #     Summary: Get User By ID
-  #     description: It shows activity ehich maps with Id
-  #     operationId: getActivity
-  #     parameters:
-  #       - name: id
-  #         description: Id  that need to be considered for filter
-  #         required: true
-  #         in: path
-  #         style: form
-  #         explode: false
-  #         schema:
-  #           type: string
-  #     responses:
-  #       '200':
-  #         description: successful operation
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: object
-  #               $ref: '#/components/schemas/User'
-  #       '400':
-  #         description: Invalid status value
-  
-  # /activity/create:
-  #   post:
-  #     tags:
-  #       - Activity
-  #     summary: Create New Activity
-  #     description: ''
-  #     operationId: createActivity
-  #     responses:
-  #       '200':
-  #         description: successful operation
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: '#/components/schemas/ApiResponse'
-  #     requestBody:
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             properties:
-  #               id:
-  #                 description: Additional data to pass to server
-  #                 type: number
-  #                 required: true
-  #               title:
-  #                 description: Activity tittle
-  #                 type: string
-  #                 required: true
-  #               dueDate:
-  #                 description: Due Date
-  #                 type: string
-  #                 required: true
-  #               completed:
-  #                 description: Activity Status
-  #                 type: boolean
-  #                 required: true
-  #       required: true
   /authn/token:
     post:
-      security:
-        - basicAuth: []
       tags:
         - Auth
       summary: Get Access and Id Token
@@ -241,10 +106,10 @@ paths:
 
   /users/me/changePassword:
     post:
-      security:
-        - basicAuth: []
       tags:
         - User
+      security:
+        - bearerAuth: []
       summary: To Change pasword
       description: ''
       operationId: Change Password
@@ -269,53 +134,21 @@ paths:
                   description: password
                   type: string
                   required: true
-                userName :
-                  description: user name
+                newPassword:
+                  description: new password
                   type: string
                   required: true
         required: true
   
-  # /users/user-info/{schema}:
-  #   get:
-  #     security:
-  #       - bearerAuth: []
-  #     tags:
-  #       - User
-  #     Summary: Get User Info By access Token
-  #     description: It Shows user info of access token
-  #     operationId: getUserInfo
-  #     parameters:
-  #       - name: schema
-  #         description: 
-  #         required: true
-  #         in: path
-  #         style: form
-  #         explode: false
-  #         schema:
-  #           type: string
-  #     responses:
-  #       '200':
-  #         description: successful operation
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: object
-  #               $ref: '#/components/schemas/User'
-  #       '400':
-  #         description: Invalid status value
-  #       '401':
-  #         description: Un-Authorized Error
-  #         $ref: '#/components/responses/UnauthorizedError'
-
-  /users/getAllUsers:
+  /users/me:
     get:
       security:
-         - basicAuth: []
+        - bearerAuth: []
       tags:
         - User
-      Summary: Get all Users
-      description: It get All users
-      operationId: getAllUsers
+      Summary: Get User Info By access Token
+      description: It Shows user info of access token
+      operationId: getUserInfo
       responses:
         '200':
           description: successful operation
@@ -331,8 +164,6 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
   /authn/refresh-token:
     post:
-      security:
-        - basicAuth : []
       tags:
         - Auth
       summary: Renew Token
@@ -366,6 +197,8 @@ paths:
         required: true
   /users/bulk:
     post:
+      security:
+        - bearerAuth: []
       tags:
         - User
       summary: Create  Users In bulk
@@ -387,6 +220,10 @@ paths:
                 type: object
                 properties:
                   firstName:
+                    description: "User First Name"
+                    type: string
+                    required: true
+                  userName:
                     description: "User First Name"
                     type: string
                     required: true
@@ -416,9 +253,10 @@ components:
         type: http
         scheme: bearer
         bearerFormat: JWT
-security:
-  - basicAuth: []
-  - bearerAuth: []
+    
+# security:
+#   - basicAuth: []
+#   - bearerAuth: []
 requestBodies:
     UserArray:
       content:
